--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -815,55 +815,55 @@
           <div class="split split-one">
             <div class="round round-two current">
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Mallory Pugh<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppla">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppla">Mallory Pugh<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Lily Muni He<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172poy8">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172poy8">Lily Muni He<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Victoria Gorlova<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Gracie Gold<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172pq3x">Victoria Gorlova<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172pq3x">Gracie Gold<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Lieke Klaver<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Chloe Kim<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172pp3s">Lieke Klaver<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172pp3s">Chloe Kim<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Elina Svitolina<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Silje Norendal<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppy6">Elina Svitolina<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppy6">Silje Norendal<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Emma Raducanu<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Alize Lim<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppa7">Emma Raducanu<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppa7">Alize Lim<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Dunn<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Rossella Fiamingo<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppr6">Olivia Dunn<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppr6">Rossella Fiamingo<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Evgenia Medvedeva<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Lucy Robson<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppfx">Evgenia Medvedeva<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/172ppfx">Lucy Robson<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <!-- END ROUND TWO -->
             <div class="round round-three current">
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Victoria Gorlova<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Lieke Klaver<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Elina Svitolina<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Emma Raducanu<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Dunn<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Evgenia Medvedeva<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <!-- END ROUND THREE -->
@@ -934,36 +934,36 @@
             <!-- END ROUND THREE -->
             <div class="round round-two current">
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Alison Stokke<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Camila Giorgi<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnga/hottest_athlete_knockouts_first_leg_part_2/">Alison Stokke<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnga/hottest_athlete_knockouts_first_leg_part_2/">Camila Giorgi<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Alex Morgan<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Valentina Vignali<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnad/hottest_athlete_knockouts_first_leg_part_2_alex/">Alex Morgan<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnad/hottest_athlete_knockouts_first_leg_part_2_alex/">Valentina Vignali<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Jutta Leerdam<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Colleen Quigley<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnv5/hottest_athlete_knockouts_first_leg_part_2_jutta/">Jutta Leerdam<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnv5/hottest_athlete_knockouts_first_leg_part_2_jutta/">Colleen Quigley<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Anna Kournikova<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Michelle Jenneke<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnlv/hottest_athlete_knockouts_first_leg_part_2_anna/">Anna Kournikova<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnlv/hottest_athlete_knockouts_first_leg_part_2_anna/">Michelle Jenneke<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">McKayla Maroney<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Maria Kirilenko<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnzl/hottest_athlete_knockouts_first_leg_part_2/">McKayla Maroney<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnzl/hottest_athlete_knockouts_first_leg_part_2/">Maria Kirilenko<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Skylar Diggins<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Eugenie Bouchard<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vo8j/hottest_athlete_knockouts_first_leg_part_2_skylar/">Skylar Diggins<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vo8j/hottest_athlete_knockouts_first_leg_part_2_skylar/">Eugenie Bouchard<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Puck Moonen<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Fanny Stollar<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vo4a/hottest_athlete_knockouts_first_leg_part_2_puck/">Puck Moonen<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vo4a/hottest_athlete_knockouts_first_leg_part_2_puck/">Fanny Stollar<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Eleonora Goldoni<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Maria Sharapova<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnqt/hottest_athlete_knockouts_first_leg_part_2/">Eleonora Goldoni<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/176vnqt/hottest_athlete_knockouts_first_leg_part_2/">Maria Sharapova<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
           </div>
