--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -863,7 +863,7 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Dunn<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Evgenia Medvedeva<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Lucy Robson<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <!-- END ROUND THREE -->
