--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -850,20 +850,20 @@
             <!-- END ROUND TWO -->
             <div class="round round-three current">
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mm3j/hottest_athlete_knockouts_second_leg_alica/">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mm3j/hottest_athlete_knockouts_second_leg_alica/">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Victoria Gorlova<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Lieke Klaver<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmku/hottest_athlete_knockouts_second_leg_lieke_klaver/">Victoria Gorlova<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmku/hottest_athlete_knockouts_second_leg_lieke_klaver/">Lieke Klaver<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Elina Svitolina<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Emma Raducanu<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmc4/hottest_athlete_knockouts_second_leg_emma/">Elina Svitolina<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmc4/hottest_athlete_knockouts_second_leg_emma/">Emma Raducanu<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Dunn<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Lucy Robson<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmoz/hottest_athlete_knockouts_second_leg_lucy_robson/">Olivia Dunn<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmoz/hottest_athlete_knockouts_second_leg_lucy_robson/">Lucy Robson<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <!-- END ROUND THREE -->
@@ -915,20 +915,20 @@
             </div>
             <div class="round round-three current">
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mm81/hottest_athlete_knockouts_second_leg_allison/">Alison Stokke<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mm81/hottest_athlete_knockouts_second_leg_allison/">Alex Morgan<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmgd/hottest_athlete_knockouts_second_leg_jutta/">Jutta Leerdam<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmgd/hottest_athlete_knockouts_second_leg_jutta/">Anna Kournikova<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmte/hottest_athlete_knockouts_second_leg_mckayla/">McKayla Maroney<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmte/hottest_athlete_knockouts_second_leg_mckayla/">Eugenie Bouchard<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmxh/hottest_athlete_knockouts_second_leg_puck_moonen/">Puck Moonen<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/177mmxh/hottest_athlete_knockouts_second_leg_puck_moonen/">Maria Sharapova<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <!-- END ROUND THREE -->
