--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -882,8 +882,8 @@
             <div class="semis-l current">
               <div class="round-details">Semifinals 1 <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/179va06/hottest_athlete_semifinal_1_allison_stokke_track/">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/179va06/hottest_athlete_semifinal_1_allison_stokke_track/">Allison Stokke<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <div class="final current">
@@ -897,8 +897,8 @@
             <div class="semis-r current">
               <div class="round-details">Semifinals 2 <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Dunne<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">McKayla Maroney<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
           </div>
