--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -890,15 +890,15 @@
               <i class="fa fa-trophy"></i>
               <div class="round-details">Grand Finale <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <div class="semis-r current">
               <div class="round-details">Semifinals 2 <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Dunne<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">McKayla Maroney<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/17bkc4b/hottest_athlete_semifinal_2_mckayla_maroney/">Olivia Dunne<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/17bkc4b/hottest_athlete_semifinal_2_mckayla_maroney/">McKayla Maroney<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
           </div>
