--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -890,8 +890,8 @@
               <i class="fa fa-trophy"></i>
               <div class="round-details">Grand Finale <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/17dsjkv/hottest_athlete_finals_olivia_dunne_gymnastics_vs/">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/17dsjkv/hottest_athlete_finals_olivia_dunne_gymnastics_vs/">Olivia Dunne<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <div class="semis-r current">
